--- a/package.json
+++ b/package.json
@@ -5,5 +5,14 @@
   "main": "index.js",
   "repository": "git@github.com:w-shop/vuejs.git",
   "author": "Grzegorz Balcewicz <gbalcewicz@kaliop.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@symfony/webpack-encore": "^0.20.1",
+    "lodash": "^4.17.10",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue": "^2.5.16",
+    "vue-loader": "^15.0.9",
+    "vue-template-compiler": "^2.5.16"
+  }
 }
